--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,7 +3,12 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/action_settings"/>
+    <item 
+        android:id="@+id/query"
+		android:icon="@drawable/query"
+        android:title="@string/query" 
+		android:showAsAction="ifRoom|withText" />
 
 </menu>
