--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="serch_horizontal_margin">6dp</dimen>
     <dimen name="serch_vertical_margin">6dp</dimen>
+    <dimen name="serch_main_margin">10dp</dimen>
 
 </resources>
