--- a/res/layout/fragment_serch_main.xml
+++ b/res/layout/fragment_serch_main.xml
@@ -19,36 +19,30 @@
             android:id="@+id/radio_left_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.51"
+            android:layout_weight="1"
             android:background="@drawable/radio_btn_left"
             android:button="@null"
             android:checked="true"
             android:gravity="center_horizontal"
-
-            android:text="PC入口"
-            android:textColor="@color/radio_btn_color"
+            android:onClick="onRadioButtonClicked"
+            android:text="模拟手机"
             android:textAlignment="gravity"
-            android:textSize="24dp" 
-            android:onClick="onRadioButtonClicked"/>
-
-
+            android:textColor="@color/radio_btn_color"
+            android:textSize="20dp" />
 
         <RadioButton
             android:id="@+id/radio_right_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.51"
+            android:layout_weight="1"
             android:background="@drawable/radio_btn_right"
             android:button="@null"
             android:gravity="center_horizontal"
-            android:text="手机入口"
-
-            android:textColor="@color/radio_btn_color"
+            android:onClick="onRadioButtonClicked"
+            android:text="模拟网页"
             android:textAlignment="center"
-            android:textSize="24dp"
-			android:onClick="onRadioButtonClicked"/>
-
-
+            android:textColor="@color/radio_btn_color"
+            android:textSize="20dp" />
     </RadioGroup>
 
     <TableLayout
@@ -66,13 +60,13 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
-            <CheckedTextView
-                android:id="@+id/checkedTextView1"
+            <TextView
+                android:id="@+id/TextView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:clickable="true"
-                android:text="CheckedTextView" />
+                android:text="TextView" />
 
             <Button
                 android:id="@+id/button1"
@@ -81,13 +75,12 @@
                 android:layout_weight="1"
                 android:text="btn" />
 
-            <CheckedTextView
-                android:id="@+id/checkedTextView2"
+            <TextView
+                android:id="@+id/TextView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
-                android:text="CheckedTextView" />
-
+                android:text="TextView" />
         </TableRow>
 
         <TableRow
