--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="radiobtn_startbgcolor_unselected">#fff</color>
     <color name="radiobtn_endbgcolor_selected">#000</color>
     <color name="radiobtn_endbgcolor_unselected">#ddd</color>
+    <color name="font_color_light">#aaa</color>
 </resources>
