--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,7 +6,11 @@
     <dimen name="serch_horizontal_margin">6dp</dimen>
     <dimen name="serch_vertical_margin">6dp</dimen>
     <dimen name="serch_main_margin">10dp</dimen>
-	<dimen name="midtable_top_margin">10dp</dimen>
-	<dimen name="midtable_left_margin">10dp</dimen>
-	<dimen name="midtable_right_margin">10dp</dimen>
+	<dimen name="midtable_top_margin">1dp</dimen>
+	<dimen name="midtable_left_margin">1dp</dimen>
+	<dimen name="midtable_right_margin">1dp</dimen>
+	<dimen name="midtable_conner_radius">8dp</dimen>
+	<dimen name="text_half_gap">4dp</dimen>
+	<dimen name="text_station_size">16sp</dimen>
+	<dimen name="table_row1_margin">6dp</dimen>
 </resources>
