--- a/res/layout/fragment_serch_main.xml
+++ b/res/layout/fragment_serch_main.xml
@@ -5,8 +5,7 @@
     android:layout_margin="@dimen/serch_main_margin"
     android:orientation="vertical"
     android:paddingLeft="6dp"
-    android:paddingRight="6dp"
-    android:paddingTop="6dp" >
+    android:paddingRight="6dp" >
 
     <RadioGroup
         android:id="@+id/radioGroup1"
@@ -45,34 +44,35 @@
             android:textSize="18sp" />
     </RadioGroup>
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/radioGroup1"
         android:layout_alignRight="@+id/radioGroup1"
         android:layout_below="@+id/radioGroup1"
         android:layout_marginTop="8dp"
+        android:orientation="vertical"
         android:background="@drawable/table_conersharp_bg"
         android:paddingLeft="@dimen/midtable_left_margin"
         android:paddingRight="@dimen/midtable_right_margin"
         android:paddingTop="@dimen/midtable_top_margin" >
 
-        <TableRow
+        <LinearLayout
             android:id="@+id/tableRow1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/tablerow_cornersharp"
+            android:orientation="horizontal"
             android:padding="@dimen/table_row1_margin" >
             
-			<LinearLayout 
-			    android:layout_width="match_parent"
+			<LinearLayout
+			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
+			    android:layout_weight="3"
+			    android:background="@drawable/station_text_bg"
+			    android:clickable="true"
 			    android:gravity="center_horizontal"
-                android:layout_weight="3"
-                android:clickable="true"
-                android:background="@drawable/station_text_bg"
-			    android:orientation="vertical"			 
-			    >
+			    android:orientation="vertical" >
 			
 			    <TextView
 			        android:id="@+id/textView1"
@@ -83,7 +83,7 @@
 			        android:text="始发站" />
 			
 			    <TextView
-			        android:id="@+id/textView2"
+			        android:id="@+id/leftstation"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:paddingTop="@dimen/text_half_gap"
@@ -95,14 +95,13 @@
             <ImageButton
                 android:id="@+id/button1"
                 android:layout_width="12dp"
-                android:layout_height="24dp"
+                android:layout_height="26dp"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_weight="1"
-                android:background="@drawable/exchange_btn"
-              />
+                android:background="@drawable/exchange_btn" />
 
 			<LinearLayout
-			    android:layout_width="match_parent"
+			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_weight="3"
 			    android:background="@drawable/station_text_bg"
@@ -119,7 +118,7 @@
 			        android:text="终点站" />
 			
 			    <TextView
-			        android:id="@+id/textView2"
+			        android:id="@+id/rightstation"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:paddingTop="@dimen/text_half_gap"
@@ -127,32 +126,40 @@
 			        android:textSize="@dimen/text_station_size" />
 			
 			</LinearLayout>
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow
+        <LinearLayout
             android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/margin_bet_row"
+            android:background="#fff" >
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="日期" />
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:gravity="right|center_vertical"
                 android:text="TextView" />
 
-        </TableRow>
+            <TextView
+                android:id="@+id/week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="TextView" />
 
-        <TableRow
-            android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </TableRow>
-    </TableLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
