--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -13,4 +13,5 @@
 	<dimen name="text_half_gap">4dp</dimen>
 	<dimen name="text_station_size">16sp</dimen>
 	<dimen name="table_row1_margin">6dp</dimen>
+	<dimen name="margin_bet_row">1dp</dimen>
 </resources>
