需要把icon问题解决

--- a/res/drawable-mdpi/text_station_pressed.xml
+++ b/res/drawable-mdpi/text_station_pressed.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#ddd"/>
+    <solid android:color="@color/something_pressed"/>
     <corners android:radius="@dimen/midtable_conner_radius"/>
 
 </shape>
