--- a/res/layout/fragment_serch_main.xml
+++ b/res/layout/fragment_serch_main.xml
@@ -132,9 +132,13 @@
             android:id="@+id/tableRow2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/margin_bet_row"
-            android:background="#fff" >
+            android:background="@drawable/row_bg_selector"
+            android:clickable="true"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/text_gap"
+            android:paddingTop="@dimen/text_gap" >
+
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
@@ -156,10 +160,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal"
+                android:drawableRight="@drawable/arrow_right"
+                android:gravity="right|center_vertical"
+                android:text="周二" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="TextView" />
 
         </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
