--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -11,7 +11,8 @@
 	<dimen name="midtable_right_margin">1dp</dimen>
 	<dimen name="midtable_conner_radius">8dp</dimen>
 	<dimen name="text_half_gap">4dp</dimen>
-	<dimen name="text_station_size">16sp</dimen>
+	<dimen name="text_gap">8dp</dimen>
+	<dimen name="text_station_size">18sp</dimen>
 	<dimen name="table_row1_margin">6dp</dimen>
 	<dimen name="margin_bet_row">1dp</dimen>
 </resources>
