--- a/res/layout/fragment_serch_main.xml
+++ b/res/layout/fragment_serch_main.xml
@@ -5,7 +5,8 @@
     android:layout_margin="@dimen/serch_main_margin"
     android:orientation="vertical"
     android:paddingLeft="6dp"
-    android:paddingRight="6dp" >
+    android:paddingRight="6dp"
+    android:paddingTop="8dp" >
 
     <RadioGroup
         android:id="@+id/radioGroup1"
@@ -45,14 +46,16 @@
     </RadioGroup>
 
     <LinearLayout
+        android:id="@+id/midtable"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/radioGroup1"
         android:layout_alignRight="@+id/radioGroup1"
         android:layout_below="@+id/radioGroup1"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/common_gap"
+        android:layout_marginTop="@dimen/common_gap"
         android:background="@drawable/table_conersharp_bg"
+        android:orientation="vertical"
         android:paddingLeft="@dimen/midtable_left_margin"
         android:paddingRight="@dimen/midtable_right_margin"
         android:paddingTop="@dimen/midtable_top_margin" >
@@ -61,7 +64,7 @@
             android:id="@+id/tableRow1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/tablerow_cornersharp"
+            android:background="@drawable/tablerow_cornersharp_up"
             android:orientation="horizontal"
             android:padding="@dimen/table_row1_margin" >
             
@@ -145,6 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
+                android:paddingLeft="@dimen/text_gap"
                 android:text="日期" />
 
             <TextView
@@ -159,8 +163,10 @@
                 android:id="@+id/week"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/arrow_right"
+                android:drawablePadding="@dimen/text_half_gap"
+                android:drawableRight="@drawable/arrow_right_12_19"
                 android:gravity="right|center_vertical"
+                android:paddingLeft="@dimen/text_gap"
                 android:text="周二" />
 
         </LinearLayout>
@@ -170,6 +176,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_bet_row"
             android:background="@drawable/row_bg_selector"
+            android:clickable="true"
             android:paddingBottom="@dimen/text_gap"
             android:paddingTop="@dimen/text_gap" >
 
@@ -179,6 +186,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
                 android:gravity="left|center_vertical"
+                android:paddingLeft="@dimen/text_gap"
                 android:text="时段" />
 
             <TextView
@@ -186,17 +194,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
+                android:drawablePadding="@dimen/text_half_gap"
+                android:drawableRight="@drawable/arrow_right_12_19"
+                android:gravity="right|center_vertical"
                 android:text="Time_something" />
+
         </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_bet_row"
-                    android:background="@drawable/row_bg_selector"
-                    android:paddingBottom="@dimen/text_gap"
-                    android:paddingTop="@dimen/text_gap" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_bet_row"
+            android:layout_marginTop="@dimen/margin_bet_row"
+            android:background="@drawable/bottonrow_bg_selector"
+            android:clickable="true"
+            android:paddingBottom="@dimen/text_gap"
+            android:paddingTop="@dimen/text_gap" >
 
             <TextView
                 android:id="@+id/TextView08"
@@ -204,6 +217,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
                 android:gravity="left|center_vertical"
+                android:paddingLeft="@dimen/text_gap"
                 android:text="车型" />
 
             <TextView
@@ -211,9 +225,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
+                android:drawablePadding="@dimen/text_half_gap"
+                android:drawableRight="@drawable/arrow_right_12_19"
+                android:gravity="right|center_vertical"
                 android:text="type_something" />
+
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/midtable" >
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_style"
+            android:minHeight="36dip"
+            android:text="Button" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_style"
+            android:minHeight="36dp"
+            android:text="Button" />
 
     </LinearLayout>
 
