--- a/res/layout/fragment_serch_main.xml
+++ b/res/layout/fragment_serch_main.xml
@@ -110,6 +110,7 @@
 			    android:background="@drawable/station_text_bg"
 			    android:clickable="true"
 			    android:gravity="center_horizontal"
+			    android:onClick="onStationSelectCilcked"
 			    android:orientation="vertical" >
 			
 			    <TextView
@@ -136,7 +137,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_bet_row"
-            android:background="@drawable/row_bg_selector"
+            android:background="@drawable/normal_bg_selector"
             android:clickable="true"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/text_gap"
@@ -175,7 +176,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_bet_row"
-            android:background="@drawable/row_bg_selector"
+            android:background="@drawable/normal_bg_selector"
             android:clickable="true"
             android:paddingBottom="@dimen/text_gap"
             android:paddingTop="@dimen/text_gap" >
