需要美化一下gridview

--- a/res/layout/city_choose_main.xml
+++ b/res/layout/city_choose_main.xml
@@ -37,7 +37,9 @@
     <GridView
         android:id="@+id/hotgd"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="@drawable/table_conersharp_bg" >
+
     </GridView>
 
 </LinearLayout>
