--- a/res/layout/fragment_query_main.xml
+++ b/res/layout/fragment_query_main.xml
@@ -69,7 +69,7 @@
             android:padding="@dimen/table_row1_margin" >
             
 			<LinearLayout
-			    android:id="@+id/from_station" 
+			    android:id="@+id/from_station"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_weight="3"
@@ -88,8 +88,10 @@
 			
 			    <TextView
 			        android:id="@+id/leftstation"
-			        android:layout_width="wrap_content"
+			        android:layout_width="match_parent"
 			        android:layout_height="wrap_content"
+			        android:layout_gravity="center_horizontal"
+			        android:gravity="center_horizontal"
 			        android:paddingTop="@dimen/text_half_gap"
 			        android:text="一个车站"
 			        android:textSize="@dimen/text_station_size" />
@@ -124,8 +126,9 @@
 			
 			    <TextView
 			        android:id="@+id/rightstation"
-			        android:layout_width="wrap_content"
+			        android:layout_width="match_parent"
 			        android:layout_height="wrap_content"
+			        android:gravity="center_horizontal"
 			        android:paddingTop="@dimen/text_half_gap"
 			        android:text="一个车站"
 			        android:textSize="@dimen/text_station_size" />
@@ -244,24 +247,24 @@
         android:layout_below="@id/midtable" >
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/book_stu_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="1dp"
             android:layout_weight="1"
+            android:text="学生票查询"
             android:background="@drawable/button_style"
-            android:minHeight="36dip"
-            android:text="Button" />
+            android:minHeight="36dip"  />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/book_ordinary_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="1dp"
             android:layout_weight="1"
+            android:text="查询"
             android:background="@drawable/button_style"
-            android:minHeight="36dp"
-            android:text="Button" />
+            android:minHeight="36dp" />
 
     </LinearLayout>
 
