--- a/res/menu/trains_info.xml
+++ b/res/menu/trains_info.xml
@@ -1,9 +1,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_add_monitor"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_add_monitor"
+        android:icon="@drawable/ic_action_new"/>
+    <item 
+        android:id="@+id/action_refresh"
+        android:showAsAction="ifRoom|withText"      
+        android:title="@string/action_refresh"
+        android:icon="@drawable/ic_action_refresh"
+        /> 
+    <item 
+        android:id="@+id/action_order"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_order"
+        android:icon="@drawable/ic_action_sort_by_size"
+        /> 
+    <item 
+        android:id="@+id/action_previousday"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_previousday"
+        android:icon="@drawable/ic_action_back"
+        />  
+    <item 
+        android:id="@+id/action_nextday"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_nextday"
+        android:icon="@drawable/ic_action_forward"
+        /> 
+
 
 </menu>
