--- a/res/layout/city_choose_main.xml
+++ b/res/layout/city_choose_main.xml
@@ -28,7 +28,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/train_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/common_gap"
