--- a/res/layout/train_info_itemview.xml
+++ b/res/layout/train_info_itemview.xml
@@ -1,102 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:columnCount="4"
     android:orientation="vertical"
-    android:rowCount="5" >
+    android:useDefaultMargins="true" >
 
-    <Space android:layout_row="1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/train_code"
-        android:layout_column="0"
-        android:layout_gravity="left|center_vertical"
-        android:layout_row="0"
-        android:layout_rowSpan="2"
-        android:text="K9052" />
+        <TextView
+            android:id="@+id/train_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/trainitemmargin"
+            android:minWidth="50dp"
+            android:text="K9052"
+            android:textSize="@dimen/traincodetextsize" />
 
-    <Space android:layout_row="3" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <Space android:layout_row="4" />
+            <TextView
+                android:id="@+id/itemview_from_station"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="@dimen/trainitemmargin"
+                android:text="娄底"
+                android:textSize="@dimen/trainitemstationtextsize" />
 
-    <TextView
-        android:id="@+id/itemview_from_station"
-        android:layout_column="1"
-        android:layout_gravity="center_horizontal"
-        android:layout_row="0"
-        android:text="娄底" />
+            <TextView
+                android:id="@+id/start_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/trainitemmargin"
+                android:layout_marginTop="0dp"
+                android:gravity="fill"
+                android:text="08:11"
+                android:textSize="@dimen/timetextsize" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/start_time"
-        android:layout_column="1"
-        android:layout_gravity="center_horizontal"
-        android:layout_row="1"
-        android:text="08:11"
-        android:textSize="11sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="fill_parent"
-        android:layout_height="18dp"
-        android:layout_column="2"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_row="0"
-        android:src="@drawable/ic_action_forward" />
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="63dp"
+                android:layout_height="18dp"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="@dimen/trainitemmargin"
+                android:src="@drawable/arrow_right_thin_easyicon_net_32" />
 
-    <TextView
-        android:id="@+id/lishi"
-        android:layout_column="2"
-        android:layout_gravity="top|center_horizontal"
-        android:layout_row="1"
-        android:text="8小时43分"
-        android:textSize="10dp" />
+            <TextView
+                android:id="@+id/lishi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/trainitemmargin"
+                android:layout_marginTop="0dp"
+                android:text="8小时43分"
+                android:textSize="@dimen/timetextsize" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/itemview_to_station"
-        android:layout_column="3"
-        android:layout_gravity="center_horizontal"
-        android:layout_row="0"
-        android:text="深圳" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/arrive_time"
-        android:layout_column="3"
-        android:layout_gravity="center_horizontal"
-        android:layout_row="1"
-        android:text="05:11"
-        android:textSize="11sp" />
+            <TextView
+                android:id="@+id/itemview_to_station"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="0dp"
+                android:layout_marginLeft="@dimen/trainitemmargin"
+                android:text="深圳"
+                android:textSize="@dimen/trainitemstationtextsize" />
 
-    <TextView
-        android:id="@+id/seattype_1"
-        android:layout_column="0"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:text="软卧：12"
-        android:textSize="10sp" />
+            <TextView
+                android:id="@+id/arrive_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/trainitemmargin"
+                android:layout_marginTop="0dp"
+                android:text="05:11"
+                android:textSize="@dimen/timetextsize" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/seattype_2"
-        android:layout_column="1"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:text="硬卧：12"
-        android:textSize="10sp" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_next_item" />
 
-    <TextView
-        android:id="@+id/seattype_3"
-        android:layout_column="2"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:text="硬座：45"
-        android:textSize="10sp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/seattype_4"
-        android:layout_column="3"
-        android:layout_gravity="left|top"
-        android:layout_row="2"
-        android:text="无座：234"
-        android:textSize="10sp" />
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="3" />
 
-</GridLayout>
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="4" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/seattype_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="软卧:12"
+            android:textSize="@dimen/seattextsize" />
+
+        <TextView
+            android:id="@+id/seattype_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/trainitemmargin"
+            android:gravity="fill"
+            android:text="硬卧:12"
+            android:textSize="@dimen/seattextsize" />
+
+        <TextView
+            android:id="@+id/seattype_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/trainitemmargin"
+            android:text="硬座:45"
+            android:textSize="@dimen/seattextsize" />
+
+        <TextView
+            android:id="@+id/seattype_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/trainitemmargin"
+            android:text="无座:234"
+            android:textSize="@dimen/seattextsize" />
+    </LinearLayout>
+
+</LinearLayout>
